--- a/package.json
+++ b/package.json
@@ -4,21 +4,31 @@
   "private": true,
   "dependencies": {
     "@createnextapp/async-local-storage": "^1.0.1",
+    "@hookform/resolvers": "^2.8.4",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@popperjs/core": "^2.11.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "bootstrap": "^5.1.3",
+    "country-state-city": "^3.0.1",
     "cra-template": "1.1.2",
+    "datatables.net-dt": "^1.11.3",
     "jquery": "^3.6.0",
+    "notistack": "^1.0.9",
     "react": "^17.0.2",
+    "react-country-region-selector": "^3.4.0",
+    "react-datepicker": "^4.5.0",
+    "react-datetime": "^3.1.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.20.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sass": "^1.35.1",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
