--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@createnextapp/async-local-storage": "^1.0.1",
     "@hookform/resolvers": "^2.8.4",
+    "@iconscout/react-unicons": "^1.1.6",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@popperjs/core": "^2.11.0",
@@ -16,6 +17,8 @@
     "country-state-city": "^3.0.1",
     "cra-template": "1.1.2",
     "datatables.net-dt": "^1.11.3",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "jquery": "^3.6.0",
     "notistack": "^1.0.9",
     "react": "^17.0.2",
@@ -23,7 +26,10 @@
     "react-datepicker": "^4.5.0",
     "react-datetime": "^3.1.1",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
+    "react-feather": "^2.0.9",
     "react-hook-form": "^7.20.2",
+    "react-quill": "^1.3.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.1.0",
