--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@iconscout/react-unicons": "^1.1.6",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.2.5",
+    "@mui/material": "^5.2.6",
     "@popperjs/core": "^2.11.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -22,7 +24,10 @@
     "jquery": "^3.6.0",
     "notistack": "^1.0.9",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.4",
     "react-country-region-selector": "^3.4.0",
+    "react-data-table-component": "^7.4.6",
+    "react-data-table-component-extensions": "^1.5.2",
     "react-datepicker": "^4.5.0",
     "react-datetime": "^3.1.1",
     "react-dom": "^17.0.2",
@@ -32,8 +37,10 @@
     "react-quill": "^1.3.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-table": "^7.7.0",
     "react-toastify": "^8.1.0",
     "sass": "^1.35.1",
+    "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.11"
   },
