--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-table": "^7.7.0",
+    "react-ticker": "^1.3.1",
     "react-toastify": "^8.1.0",
     "sass": "^1.35.1",
     "styled-components": "^5.3.3",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.11"
   },
