--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "jquery": "^3.6.0",
+    "little-state-machine": "^4.2.0",
     "notistack": "^1.0.9",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.4",
