--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-draft-wysiwyg": "^1.14.7",
     "react-feather": "^2.0.9",
     "react-hook-form": "^7.20.2",
+    "react-paystack": "^3.0.5",
     "react-quill": "^1.3.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
