--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "react-draft-wysiwyg": "^1.14.7",
     "react-feather": "^2.0.9",
     "react-hook-form": "^7.20.2",
+    "react-images": "^1.2.0-beta.7",
     "react-paystack": "^3.0.5",
+    "react-photo-gallery": "^8.0.0",
     "react-quill": "^1.3.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
