--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-feather": "^2.0.9",
     "react-hook-form": "^7.20.2",
     "react-images": "^1.2.0-beta.7",
+    "react-measure": "^2.5.2",
     "react-paystack": "^3.0.5",
     "react-photo-gallery": "^8.0.0",
     "react-quill": "^1.3.5",
