--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
     "react-feather": "^2.0.9",
+    "react-grid-gallery": "^0.5.5",
     "react-hook-form": "^7.20.2",
     "react-images": "^1.2.0-beta.7",
     "react-measure": "^2.5.2",
