--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
     "react-feather": "^2.0.9",
+    "react-grid": "^4.0.4",
     "react-grid-gallery": "^0.5.5",
     "react-hook-form": "^7.20.2",
     "react-images": "^1.2.0-beta.7",
@@ -46,6 +47,7 @@
     "react-table": "^7.7.0",
     "react-ticker": "^1.3.1",
     "react-toastify": "^8.1.0",
+    "react-ui-cards": "^3.0.0",
     "sass": "^1.35.1",
     "styled-components": "^5.3.3",
     "uuid": "^8.3.2",
