--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-images": "^1.2.0-beta.7",
     "react-measure": "^2.5.2",
     "react-paystack": "^3.0.5",
+    "react-pdf": "^5.7.2",
     "react-photo-gallery": "^8.0.0",
     "react-quill": "^1.3.5",
     "react-router-dom": "^5.2.0",
