--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@createnextapp/async-local-storage": "^1.0.1",
+    "@emotion/react": "^11.9.0",
     "@hookform/resolvers": "^2.8.4",
     "@iconscout/react-unicons": "^1.1.6",
     "@material-ui/core": "^4.11.4",
