--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-grid": "^4.0.4",
     "react-grid-gallery": "^0.5.5",
     "react-hook-form": "^7.20.2",
+    "react-icons": "^4.3.1",
     "react-images": "^1.2.0-beta.7",
     "react-measure": "^2.5.2",
     "react-paystack": "^3.0.5",
